# batch-transfer-substream

./: .gitignore  Cargo.toml  Makefile  build.rs  substreams.yaml
proto/: erc1155.proto
sink/: package-lock.json  package.json
sink/src/: main.ts
src/: lib.rs
src/abi/: erc1155.rs  mod.rs
src/pb/: mod.rs
substream/: .gitignore  Cargo.toml  Makefile  batch-transfers-1155-v1.0.0.spkg  substreams.yaml
substream/src/: lib.rs
substream/src/pb/: eth.erc1155.v1.rs  mod.rs
